<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_full_marker"
        android:title="Daftar Lokasi Perangkat"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_about"
        android:title="@string/activity_about"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_notification"
        android:title="@string/activity_notification"
        app:showAsAction="never"/>
</menu>